@@ -1,3 +1,11 @@
+2011-01-04  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/chconf.h (CH_USE_DYNAMIC): It's TRUE now.
+
+	* src/usb_desc.c (gnukConfigDescriptor): Added PINPAD_SUPPORT.
+
+	* src/pin-cir.c (cir_timer_interrupt): Added cir_toggle support.
+
 2010-12-29  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/pin-cir.c (cir_timer_interrupt): Support Philips RC-5 protocol.
